# energy_forecasting

./: .coverage  .dockerignore  .gitignore  Dockerfile  justfile  logging.conf  pyproject.toml
.abacusai/: config.json
.github/workflows/: ci.yml
artifacts/best_model/: metadata.json  scaler_X.joblib  scaler_y.joblib
config/: default.yml
src/common/: data.py  metrics.py  mlflow_utils.py
src/dashboard/: app.py
src/inference/: __init__.py  artifacts.py  predictor.py  schema.py
src/models/: __init__.py  base.py  dnn.py  lstm.py  random_forest.py  xgboost_model.py
src/pipelines/: benchmarking.py  experiment_templates.py  feature_engineering.py  generate_data.py  monitoring.py  predict.py  training.py
src/serving/: app.py
tests/: test_data.py  test_inference.py  test_metrics.py  test_mlflow_utils.py  test_models.py  test_monitoring.py  test_predict_cli.py  test_serving.py
